<resources>
    <string name="app_name">Confined</string>
    <string name="prompt_email">Email or username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm">Confirm password</string>
    <string name="prompt_pseudo">Enter pseudonyme</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="PREF_KEY_USERNAME">username</string>
    <string name="PREF_KEY_MAIL">mail</string>
    <string name="STATUS_SUCCESS">success</string>
    <string name="STATUS_FAIL">fail</string>
    <string name="newtask_popup_template_title">Créer une tâche</string>
    <string name="newtask_popup_template_type_lbl">Type :</string>
    <string name="newtask_popup_template_score_lbl">Points :</string>
    <string name="newtask_popup_template_frequency_lbl">Fréquence :</string>
    <string name="newtask_popup_template_importance_lbl">Urgence :</string>
    <string name="newtask_popup_template_description_lbl">Description :</string>
    <string name="adapter_tasklist_default_name">Nouvelle tâche</string>
    <string name="board">Board</string>
    <string name="mytasks">Mes tâches</string>
    <string name="leaderboard">Classement</string>
    <string name="profile">Profil</string>
    <string name="modifytask_popup_title">Modifier la tâche</string>
    <string name="modifytask_popup_add_button_name">Modifier</string>
    <string name="newtask_popup_template_cancel_btn">Annuler</string>
    <string name="newtask_popup_template_addtask_btn">Ajouter la tâche</string>
    <string name="newtask_popup_template_name_lbl">Nom :</string>
    <string name="picktaskimg_popup_template_title">Choisir une image</string>
    <string name="picktaskimg_popup_template_cancel_btn">Annuler</string>
    <string name="picktaskimg_popup_template_choose_btn">Choisir</string>
<<<<<<< HEAD
=======

    <string name="modify_popup_template_title">Modifiez votre Profil</string>
    <string name="modify_popup_template_new_pseudo_lbl">Nouveau Pseudo :</string>
    <string name="modify_popup_template_new_icon_lbl">Nouvelle Icone :</string>
    <string name="modify_popup_template_validation_btn">Valider</string>
    <string name="pickicon_popup_template_title">Choisir une icone</string>

>>>>>>> 29fb37037f6ab405a22c96bd923a8684bce4cfbc

    <string name="bottom_navigation_menu_board">Board</string>
    <string name="bottom_navigation_menu_leaderboard">Classement</string>
    <string name="bottom_navigation_menu_mytasks">Mes taches</string>
    <string name="bottom_navigation_menu_profile">Profil</string>
    <string name="newtask_popup_template_deadline_lbl">Echéance :</string>
<<<<<<< HEAD
=======

>>>>>>> 29fb37037f6ab405a22c96bd923a8684bce4cfbc
</resources>