<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fdfffc"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#C52233">



        <ImageView
            android:id="@+id/adapter_taskimg_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@mipmap/logoapp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:hint="@string/prompt_email"/>

    <EditText
        android:id="@+id/login_pseudo_edit"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_edit_marginTop"
        android:visibility="gone"
        android:hint="@string/prompt_pseudo"/>

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_edit_marginTop"
        android:inputType="textPassword"
        android:hint="@string/prompt_password" />

    <EditText
        android:id="@+id/login_confirm_edit"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_edit_marginTop"
        android:inputType="textPassword"
        android:hint="@string/prompt_confirm"
        android:visibility="gone"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/login_padding_top_bottom"
        android:paddingTop="@dimen/login_padding_top_bottom"
        android:paddingLeft="@dimen/login_padding_sides"
        android:paddingRight="@dimen/login_padding_sides"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_btn_marginTop"
        android:text="@string/action_sign_in"
        android:background="@drawable/beautiful_button"/>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/login_padding_top_bottom"
        android:paddingTop="@dimen/login_padding_top_bottom"
        android:paddingLeft="@dimen/login_padding_sides"
        android:paddingRight="@dimen/login_padding_sides"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/action_register"
        android:background="@drawable/beautiful_button"
        />

</LinearLayout>

