<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/adapter_tasklist_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone"
        android:clickable="false"
        />

    <ImageView
        android:id="@+id/adapter_tasklist_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="75dp"
        android:maxWidth="75dp"
        android:minHeight="75dp"
        android:minWidth="75dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/leader_ico_leave"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/adapter_tasklist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adapter_tasklist_default_name"
            android:textSize="14dp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newtask_popup_template_description_lbl"
                android:layout_gravity="left"
                />
            <TextView
                android:id="@+id/adapter_tasklist_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="left"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newtask_popup_template_importance_lbl"
                android:layout_gravity="center"

                />
            <RatingBar
                android:id="@+id/adapter_tasklist_importance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/ratingBarStyleSmall"
                />

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newtask_popup_template_score_lbl"
                android:layout_gravity="center"
                />
            <RatingBar
                android:id="@+id/adapter_tasklist_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/ratingBarStyleSmall"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newtask_popup_template_frequency_lbl"
                android:layout_gravity="left"
                />
            <TextView
                android:id="@+id/adapter_tasklist_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="left"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>