<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/newtask_popup_template_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_title_height"
        android:text="@string/newtask_popup_template_title"
        android:gravity="center"
        android:textColor="@color/popup_title_color"
        android:textStyle="bold"
        android:textSize="@dimen/popup_title_text_size"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/newtask_popup_template_linearlayout_marginBottom"
                >

                <ImageButton
                    android:id="@+id/newtask_popup_template_taskimg"
                    android:layout_width="@dimen/newtask_popup_template_taskimg_size"
                    android:layout_height="@dimen/newtask_popup_template_taskimg_size"
                    android:src="@drawable/modify_icon_research"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_popup_template_name_lbl"
                    android:gravity="center"
                    android:textColor="@color/popup_text_color"
                    android:textSize="@dimen/popup_text_size"
                    android:layout_gravity="bottom"
                    />

                <EditText
                    android:id="@+id/newtask_popup_template_name_txtbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:text=""
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/newtask_popup_template_linearlayout_marginBottom"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_popup_template_description_lbl"
                    android:gravity="center"
                    android:textColor="@color/popup_text_color"
                    android:textSize="@dimen/popup_text_size"
                    android:layout_gravity="bottom"
                    />

                <EditText
                    android:id="@+id/newtask_popup_template_description_txtbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/newtask_popup_template_linearlayout_marginBottom"
                android:weightSum="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_popup_template_importance_lbl"
                    android:gravity="center"
                    android:textColor="@color/popup_text_color"
                    android:textSize="@dimen/popup_text_size"
                    android:layout_gravity="center"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="@dimen/newtask_popup_template_importance_ratingBar_gap"
                    />

                <RatingBar
                    android:id="@+id/newtask_popup_template_importance_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    android:layout_gravity="center_vertical"
                    android:minHeight="0dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/newtask_popup_template_linearlayout_marginBottom"
                android:weightSum="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_popup_template_score_lbl"
                    android:gravity="center"
                    android:textColor="@color/popup_text_color"
                    android:textSize="@dimen/popup_text_size"
                    android:layout_gravity="center"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="@dimen/newtask_popup_template_score_ratingBar_gap" />

                <RatingBar
                    android:id="@+id/newtask_popup_template_score_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    android:minHeight="0dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/newtask_popup_template_linearlayout_marginBottom"
                android:weightSum="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_popup_template_deadline_lbl"
                    android:layout_gravity="center"
                    android:textColor="@color/popup_text_color"
                    android:textSize="@dimen/popup_text_size"
                    />

                <TextView
                    android:id="@+id/newtask_popup_template_deadline_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/popup_text_color"
                    android:textSize="@dimen/popup_text_size"
                    android:text="" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/newtask_popup_template_deadline_calendar_btn"
                    android:layout_width="@dimen/newtask_popup_template_deadline_calendar_btn_size"
                    android:layout_height="@dimen/newtask_popup_template_deadline_calendar_btn_size"
                    android:layout_gravity="center"
                    android:padding="@dimen/newtask_popup_template_deadline_calendar_btn_padding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calendar_ico"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/newtask_popup_template_btn_container_marginTop"
                android:gravity="right"
                >

                <Button
                    android:id="@+id/newtask_popup_template_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_popup_template_cancel_btn"
                    />

                <Button
                    android:id="@+id/newtask_popup_template_addtask_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newtask_popup_template_addtask_btn"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>